feat(users): 添加批量注册与批量修改用户功能; (#21)
revert:恢复dev分支错误相关提交

新增支持通过 CSV 文件批量注册用户的功能，以及批量修改用户账号类型和角色的功能。
- 添加接口用于批量注册用户，并使用Content-Type区分单个与批量注册请求
- 添加 `/api/users/category` 和 `/api/users/role` 接口用于批量修改用户属性
- 引入 207 Multi-Status 响应机制处理部分失败的批量操作
- 更新错误处理逻辑，细化多种业务错误类型
- 完善 Swagger 文档，补充新接口的定义和说明
- README 中增加新功能使用说明及快速上手示例
